# navigation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  dqn.world  goal_obstacle.world  heicub_goal_obstacle.world  heicub_mars.world  line.world  vehicle_goal_obstacle.world
catkin_ws/: notes.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/lib/beginner_tutorials/: listener  talker  yarp_to_ros_pub
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/beginner_tutorials/cmake/: FindORB_SLAM2.cmake
catkin_ws/src/beginner_tutorials/launch/: turtlemimic.launch
catkin_ws/src/beginner_tutorials/src/: listener.cpp  stereo_slam.cpp  yarp_to_ros_pub.cpp
cmake/: CMakeLists.txt.in.orb_slam2  FindORB_SLAM2.cmake  navigation_uninstall.cmake
gazebo/: CMakeLists.txt  vehicle.sdf  vehicle.world
gazebo/conf/: chassis_intertial.ini
gazebo/plugins/: vehicle_plugin.cpp  vehicle_plugin.h
include/navigation/: ddpg_continuous_control.h  models.h  navigation.h  ornstein_uhlenbeck_process.h  proximal_policy_optimization.h  q_learning.h  replay_memory.h
irobot/: CMakeLists.txt  irobot.sdf  model.config
irobot/conf/: chassis_intertial.ini  l_camera.ini  r_camera.ini
irobot/plugins/: irobot_plugin.cpp  irobot_plugin.h
models/goal/: goal.sdf
models/obstacle/: obstacle.sdf
python/: model.py  train.py  trained_goal_obstacle.pt  trained_lined_plane.pt  trained_script_module_goal_obstacle.pt  trained_script_module_lined_plane.pt  utils.py
src/: CMakeLists.txt  a3c.cpp  ddpg_continuous_control.cpp  dqn.h  dqn_agent.h  heicub_stereo.yaml  keyboard.cpp  ornstein_uhlenbeck_process.cpp  proximal_policy_optimization.cpp  q_learning.cpp  q_learning.h  replay_memory.cpp  rl_agent.h  stereo_slam.cpp  test_dqn.cpp
src/config/: calib.yaml  heicub_rgbd.yaml  heicub_stereo.yaml
utils/: CMakeLists.txt  action.h  blob_util.cpp  blob_util.h  dqn.h  drqn.h  example_dqn.cpp  example_read_cams.cpp  example_tensor_util.cpp  example_test_model.cpp  keyboard.cpp  keyboard.h  model_base.cpp  model_base.h  models.h  net_util.cpp  net_util.h  net_util_operator.cpp  play_ground.cpp  q_learning.cpp  read_cams.cpp  read_cams.h  tensor_util.cpp  tensor_util.h  tensor_util.tpp  test_model.h  yarp_to_ros_pub.cpp
vehicle/: CMakeLists.txt  vehicle.sdf  vehicle.world
vehicle/conf/: l_camera.ini  r_camera.ini
vehicle/plugins/: vehicle_plugin.cpp  vehicle_plugin.h
